Role Based Login , Employee , DG, Project Director, HRMS Module created with dashboard component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,13 @@
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
-    "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    // "strictInjectionParameters": true,
+    // "strictInputAccessModifiers": true,
+    // "strictTemplates": true
+    "strictPropertyInitialization": false,
+    "strictNullChecks": false,
+    // "strictInjectionParameters": true,
+    // "strictInputAccessModifiers": true,
+    // "strictTemplates": true
   }
 }
