--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sciencecity-hrmis",
+  "name": "CRSC-hrms",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@angular/service-worker": "~13.1.0",
-    "@auth0/angular-jwt": "^5.0.2",
+    "@auth0/angular-jwt": "^5.1.2",
     "@fullcalendar/angular": "^5.11.4",
     "@fullcalendar/core": "^5.11.3",
     "@fullcalendar/daygrid": "^5.11.4",
@@ -38,6 +38,7 @@
     "angular2-text-mask": "^9.0.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
+    "sha512": "^0.0.1",
     "crypto-js": "^4.1.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
@@ -73,4 +74,5 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.5.2"
   }
+  
 }
